--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<ul>
-  <li><a href="/0.12.1-latest/">@11ty/eleventy v0.12.1</a></li>
 
-  <li>
-    <a href="/1.0.0-canary.37-canary/">@11ty/eleventy v1.0.0-canary.37</a>
-  </li>
+<ul>
+
+  <li><a href="0.12.1-latest/">@11ty/eleventy v0.12.1</a>
+
+  <li><a href="1.0.0-canary.37-canary/">@11ty/eleventy v1.0.0-canary.37</a>
+
 </ul>
